2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `sigaction' check to configure.in.

	* configure.in (sigaction): Add to `AC_CHECK_FUNCS_ONCE'.

2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `psignal' check to configure.in.

	* configure.in (psignal): Add to `AC_CHECK_FUNCS_ONCE'.

2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `seteuid', `setuid' checks to configure.in.

	* configure.in (seteuid, setuid): Add to `AC_CHECK_FUNCS_ONCE'.

2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `ftruncate' check to configure.in.

	* configure.in (ftruncate): Add to `AC_CHECK_FUNCS_ONCE'.

2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `vfork', `fork' checks to configure.in.

	* configure.in (vfork.h): Remove from `AC_CHECK_HEADERS_ONCE'.
	(AC_FUNC_FORK): New.

2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `waitpid' check to configure.in.

	* configure.in (waitpid): Add to `AC_CHECK_FUNCS_ONCE'.

2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `mktemp' check to configure.in.

	* configure.in (mktemp): Add to `AC_CHECK_FUNCS_ONCE'.

2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `getuid', `getpwuid' checks to configure.in.

	* configure.in (getpwuid, getuid): Add to `AC_CHECK_FUNCS_ONCE'.

2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `fchmod' check to configure.in.

	* configure.in (fchmod): Add to `AC_CHECK_FUNCS_ONCE'.

2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `getcwd', `getwd' check to configure.in.

	* configure.in (getcwd, getwd): Add to `AC_CHECK_FUNCS_ONCE'.

2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `readlink' check to configure.in; use _POSIX_SYMLOOP_MAX.

	* configure.in (AC_CHECK_HEADERS_ONCE): Remove sys/param.h.
	(AC_CHECK_FUNCS_ONCE): New, with one item: `readlink'.

2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move checks for missing type definitions to configure.in.